# SoftRenderer

./: .gitignore  README.html  README.md
code/: CMakeLists.txt  Doxyfile
code/include/: Application.h  Matrix.h  Renderer.h  Simplify.h  Simplify_pure.h  Transformation.h  Vector.h
code/src/: Application.cpp  Matrix.cpp  QEM.cpp  Renderer.cpp  Transformation.cpp  Vector.cpp  main.cpp
